# make-cmake-and-ninja-homework

./: CMakeLists.txt  Makefile
src/: main.cpp
